--- a/client/css/widgets/card.css
+++ b/client/css/widgets/card.css
@@ -4,10 +4,6 @@
 
 .card > .cardFace {
   display: none;
-}
-
-.card > .active.cardFace {
-  display: block;
   overflow: hidden;
   width: 100%;
   height: 100%;
@@ -15,7 +11,11 @@
   box-sizing: border-box;
 }
 
-.card > .active.cardFace > .cardFaceObject {
+.card > .active.cardFace {
+  display: block;
+}
+
+.card > .cardFace > .cardFaceObject {
   position: absolute;
   background-size: contain;
   background-repeat: no-repeat;
