--- a/client/css/editor/layout.css
+++ b/client/css/editor/layout.css
@@ -15,6 +15,8 @@ body {
   --textDimColor1: #ccc;
 
   color-scheme: light;
+  --gridSize: 25px;
+  --gridColor: #c0c0c0
 }
 
 body.darkMode {
@@ -55,6 +57,12 @@ body.edit {
 
 body.edit.zoomedOut #roomArea, body.edit.zoomedOut #topSurface {
   overflow: visible;
+}
+
+body.gridLines #roomArea, body.gridLines #topSurface {
+  background-image: linear-gradient(to right, transparent 0, transparent calc(var(--gridSize) - 1px), var(--gridColor) var(--gridSize), var(--gridColor) var(--gridSize)),
+                    linear-gradient(to bottom, transparent 0, transparent calc(var(--gridSize) - 1px), var(--gridColor) var(--gridSize), var(--gridColor) var(--gridSize));
+  background-size:  var(--gridSize) var(--gridSize);
 }
 
 #editorSelection {
