Populates fields in overlay with current values.

--- a/client/css/editor/layout.css
+++ b/client/css/editor/layout.css
@@ -16,7 +16,8 @@ body {
 
   color-scheme: light;
   --gridSize: 25px;
-  --gridColor: #c0c0c0
+  --gridColor: #c0c0c0;
+  --gridMajor: 25;
 }
 
 body.darkMode {
