Make the chooser UI better looking

--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -1689,3 +1689,23 @@ input:invalid+span:after {
 #chooseInputOverlay .widget {
   position: unset;
 }
+
+.chooseContainer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+#chooseInputOverlay h1 {
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+#chooseInputOverlay .footer {
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
+}
