--- a/client/css/editor/toolbar.css
+++ b/client/css/editor/toolbar.css
@@ -18,16 +18,16 @@
   padding: 5px;
 }
 
-#editorToolbar button.active, #editorDragToolbar button.active {
+#editorToolbar > div > button.active, #editorDragToolbar > div > button.active {
   background: var(--VTTblueDark);
 }
 
-#editorToolbar button:disabled, #editorDragToolbar button:disabled {
+#editorToolbar > div > button:disabled, #editorDragToolbar > div > button:disabled {
   background: var(--VTTblue);
   color: white;
 }
 
-#editorToolbar button::before, #editorDragToolbar button::before {
+#editorToolbar > div > button::before, #editorDragToolbar > div > button::before {
   margin: 0;
 }
 
@@ -35,7 +35,7 @@
   opacity: 0.2;
 }
 
-#editorToolbar button span, #editorDragToolbar button span {
+#editorToolbar button span, #editorDragToolbar button span, .editorToolbarButtonContent {
   display: none;
   position: absolute;
   top: calc(var(--editToolbarHeight) + 1px);
@@ -57,6 +57,16 @@
 }
 
 
+.editorToolbarButtonContent {
+  color: white;
+  margin-left: 1px;
+  margin-top: -2px;
+}
+
+.editorToolbarButtonContent.active {
+  display: block;
+}
+
 
 body.compactEditorToolbar #editorToolbar {
   flex-wrap: wrap;
@@ -68,4 +78,12 @@ body.compactEditorToolbar #editorToolbar button {
 
 body.compactEditorToolbar #editorToolbar button::before {
   font-size: 20px;
+}
+
+
+
+
+.saveContent {
+  display: flex;
+  flex-direction: column;
 }
