--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -1373,7 +1373,7 @@ button:disabled:hover {
 .inputselect label,
 .inputpalette label,
 .inputchoose label{
-  padding: 4px 5px 0 5px;
+  padding: 4px 5px 2px 5px;
     width: 100%;
     vertical-align: top;
     flex-shrink: 0;
