--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -1407,6 +1407,17 @@ button:disabled:hover {
   line-height: 36px;
   border-radius: 4px;
 }
+
+.inputselect::before {
+  content: "expand_more";
+  font-family: "Material Icons";
+  font-size: 20px;
+  line-height: 20px;
+  position: absolute;
+  right: 10px;
+  bottom: 16px;
+}
+
 .inputnumber label:empty ~ input,
 .inputstring label:empty ~ input,
 .inputselect label:empty ~ select
