--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -1416,6 +1416,7 @@ button:disabled:hover {
   position: absolute;
   right: 10px;
   bottom: 16px;
+  z-index: -1;
 }
 
 .inputnumber label:empty ~ input,
