--- a/client/css/widgets/holder.css
+++ b/client/css/widgets/holder.css
@@ -6,6 +6,8 @@
   border-color: #d8d8d8 #ccc #ccc #d8d8d8;
 }
 
+.holder.droppable.droptarget
+
 .holder > .widget {
   left: -1px;
   top: -1px;
@@ -31,8 +33,4 @@
 
 .holder.showCardBack > .card.widget > :not(.active).cardFace, .card.widget.showCardBack > :not(.active).cardFace {
   display: block;
-}
-
-.widget.droppable.droptarget {
-  border-color: #333!important;
 }
