--- a/client/css/fonts.css
+++ b/client/css/fonts.css
@@ -486,7 +486,13 @@
   background: var(--url);
 }
 
-#symbolPickerOverlay .hidden {
+#symbolPickerOverlay .hidden,
+#symbolPickerOverlay.hideImages h2.imageCategory,
+#symbolPickerOverlay.hideImages .emoji,
+#symbolPickerOverlay.hideImages .gameicons,
+#symbolPickerOverlay.hideFonts h2.fontCategory,
+#symbolPickerOverlay.hideFonts .symbols,
+#symbolPickerOverlay.hideFonts .material-icons {
   display: none;
 }
 
