--- a/client/css/fonts.css
+++ b/client/css/fonts.css
@@ -461,7 +461,7 @@
   word-break: break-all;
 }
 
-#symbolPickerOverlay .emoji:hover, #symbolPickerOverlay.fewResults .emoji {
+#symbolPickerOverlay .emoji:hover, #symbolPickerOverlay .emojiFlag, #symbolPickerOverlay.fewResults .emoji {
   background: var(--url) center no-repeat;
   color: transparent;
 }
